src/objects/Funding_Source__c.object
<CustomObject>
    <description>REFERRAL - Funding Source</description>
    <fields>
        <fullName>ALS_ESRD_Black_Lung_Disease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALS/ESRD/Black Lung Disease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARU_Day_Total__c</fullName>
        <label>ARU Day Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARU_Days_Used__c</fullName>
        <label>ARU Days Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Coverage_Comments__c</fullName>
        <label>Additional Coverage Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Coverage__c</fullName>
        <label>Show Additional Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjuster_Company__c</fullName>
        <label>Adjuster Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Email__c</fullName>
        <label>Adjuster Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Adjuster_Fax__c</fullName>
        <label>Adjuster Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Adjuster_Name__c</fullName>
        <label>Adjuster Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Phone__c</fullName>
        <label>Adjuster Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Are_injuries_covered__c</fullName>
        <label>Are Injuries Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Excess_Justification__c</fullName>
        <label>Auth Excess Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auth_Units_Grand_Total__c</fullName>
        <inlineHelpText>This is automatically calculated Read-only field</inlineHelpText>
        <label>Auth Units Grand Total</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_given_method__c</fullName>
        <label>How Given</label>
        <picklist>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Auth Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_Comments__c</fullName>
        <label>Authorization Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Excess_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization Excess Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Sources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Excess_Approved__c</fullName>
        <label>Authorization Excess Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_Number__c</fullName>
        <label>Authorization Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Override_Comments__c</fullName>
        <label>Authorization Override Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorization_Received_Date__c</fullName>
        <label>Authorization Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_Request_Date__c</fullName>
        <label>Authorization Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_Type__c</fullName>
        <label>Authorization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Stay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stay - Open Ended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:1 Sitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Cost Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Holds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BIT_Auth_Units__c</fullName>
        <label>BIT Auth Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIT_Days_Authorized_From__c</fullName>
        <label>BIT Days Authorized From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIT_Days_Authorized_To__c</fullName>
        <label>BIT Days Authorized To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Cycle__c</fullName>
        <label>Benefit Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Calendar Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spell of Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Year_End_Date__c</fullName>
        <label>Benefit Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Year_Start_Date__c</fullName>
        <label>Benefit Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Contract_Used_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to CM contract object</description>
        <label>Contract Used</label>
        <referenceTo>CareMeridian_Contract__c</referenceTo>
        <relationshipLabel>Funding Sources</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Reference_Number__c</fullName>
        <label>Call Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_Patient_Return_to_Work__c</fullName>
        <label>Can Patient Return to Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_City__c</fullName>
        <label>Claims Submission City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_Company__c</fullName>
        <label>Claims Submission Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_Email__c</fullName>
        <label>Claims Submission Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_Fax__c</fullName>
        <label>Claims Submission Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_Phone__c</fullName>
        <label>Claims Submission Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_State__c</fullName>
        <label>Claims Submission State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_Street_1__c</fullName>
        <label>Claims Submission Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_Street_2__c</fullName>
        <label>Claims Submission Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Submission_Zip__c</fullName>
        <label>Claims Submission Zip</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobra__c</fullName>
        <label>Cobra</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Continued_Payment__c</fullName>
        <label>Continued Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Used__c</fullName>
        <label>Contract Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay__c</fullName>
        <label>Copay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counselling_Auth_Units__c</fullName>
        <label>Counseling Auth Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counselling_Days_Authorized_From__c</fullName>
        <label>Counseling Days Authorized From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Counselling_Days_Authorized_To__c</fullName>
        <label>Counseling Days Authorized To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coverage_Details__c</fullName>
        <label>Coverage Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covered__c</fullName>
        <label>Is Self Inflicted Dx Covered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DME_Benefits__c</fullName>
        <label>DME Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DME_Calculation_Type__c</fullName>
        <label>DME Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DME_Maximum__c</fullName>
        <label>DME Maximum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DME_Per_Day__c</fullName>
        <label>DME Per Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DME_Precert_Required__c</fullName>
        <label>DME Precert Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DME__c</fullName>
        <label>DME</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Authorized_From__c</fullName>
        <label>Days Authorized From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Authorized_To__c</fullName>
        <label>Days Authorized To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Authorized__c</fullName>
        <label>Days Authorized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible_Applicable_to_OOP__c</fullName>
        <label>Deductible Applicable to OOP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deductible_Met__c</fullName>
        <label>Deductible (Met)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_CM_confirm_level__c</fullName>
        <label>Did CM confirm level?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_drugs_alcohol_contribute_to_injury__c</fullName>
        <label>Did drugs/alcohol contribute to injury</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_PH_Plan_to_Continue_Working__c</fullName>
        <label>Does PH Plan to Continue Working</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dx_Pre_Existing__c</fullName>
        <label>Dx Pre-Existing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Cost_therapy_Auth__c</fullName>
        <label>Effective Date of Cost/therapy Auth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source_ID__c</fullName>
        <label>Funding Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source_Status__c</fullName>
        <label>Funding Source Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <picklist>
            <picklistValues>
                <fullName>AHCCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beacon Health Strategies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonnie Frazier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgeway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage Admin Fee (DD148)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAC Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CADI Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Wisconsin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cenpatico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child  Protective Services (CPS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clackamas County MHDDSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Care Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Care of Central Wisconsin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Living Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContinuUS Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curry County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dane County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debbie McDaniel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Developmental Disabilities (DDD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department of Vocational Rehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desert Regional Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Douglas County</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Given_By__c</fullName>
        <label>Given By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Visits_Total__c</fullName>
        <label>HH Visits Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Visits_Used__c</fullName>
        <label>HH Visits Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_patient_Benefits_Limit__c</fullName>
        <label>In-patient Benefits Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Plan__c</fullName>
        <label>Individual Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insured_DOB__c</fullName>
        <label>Insured DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insured_SSN__c</fullName>
        <label>Insured SSN</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Internal_Contact__c</fullName>
        <label>Payer CM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Email__c</fullName>
        <label>Payer CM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_Fax__c</fullName>
        <label>Payer CM Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Internal_Phone__c</fullName>
        <label>Payer CM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Is_patient_policy_holder__c</fullName>
        <label>Is Patient Policy Holder?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Max_Met__c</fullName>
        <label>Lifetime Max (Met)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Max__c</fullName>
        <label>Lifetime Max</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_is_Secondary_Coverage__c</fullName>
        <label>Medicare is Secondary Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medication_Cost_Calculation_Type__c</fullName>
        <label>Medication Cost Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medication_Costs__c</fullName>
        <label>Medication Costs</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medication_Per_Day__c</fullName>
        <label>Medication Per Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_to_Month__c</fullName>
        <label>Month to Month</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>More_than_1_5_Yrs_of_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>More than 1.5 Yrs of Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NR_CM_Company__c</fullName>
        <label>NR CM Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NR_CM_Email__c</fullName>
        <label>NR CM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NR_CM_Fax__c</fullName>
        <label>NR CM Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NR_CM_Name__c</fullName>
        <label>NR CM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NR_CM_Phone__c</fullName>
        <label>NR CM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Negotiated_Rate__c</fullName>
        <label>Negotiated Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Phone__c</fullName>
        <label>Network Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Hrs_Expected__c</fullName>
        <label>Number of Hrs. Expected</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nutritional_Supplements_Cost_Calculation__c</fullName>
        <label>Nutritional Supplements Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nutritional_Supplements_Cost__c</fullName>
        <label>Nutritional Supplements Cost</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nutritional_Supplements_Per_Day__c</fullName>
        <label>Nutritional Supplements Per Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOP_Expense_Met__c</fullName>
        <label>OOP Expense (Met)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOP_Expense__c</fullName>
        <label>OOP Expense</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OT_Auth_Units__c</fullName>
        <label>OT Auth Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OT_Days_Authorized_From__c</fullName>
        <label>OT Days Authorized From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OT_Days_Authorized_To__c</fullName>
        <label>OT Days Authorized To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Authorization_Type__c</fullName>
        <label>Other Authorization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cost_Calculation_Type__c</fullName>
        <label>Other Cost Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Cost_Description__c</fullName>
        <label>Other Cost Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cost__c</fullName>
        <label>Other Cost</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Per_Day__c</fullName>
        <label>Other Per Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>